fix: avoid unnecessary line breaks and overflows

--- a/src/app/slides/prism/prism.component.scss
+++ b/src/app/slides/prism/prism.component.scss
@@ -9,6 +9,6 @@ code[class*='language-'] {
 pre[class*='language-'] {
     border-radius: 0.1em;
     line-height: 10%;
-    margin: 0 0 0.5em;
+    margin: 0 0 0.25em;
     padding: 0 3% 1%;
 }
