--- a/src/app/slides/slide-one/slide-one.component.scss
+++ b/src/app/slides/slide-one/slide-one.component.scss
@@ -1,4 +1,5 @@
 h1 {
+    letter-spacing: -0.01em;
     text-align: center;
 }
 
